style: 코드 스타일 재지정